@@ -1,5 +1,8 @@
 2010-05-13  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (LD_SWITCH_X_SITE): Define as a variable, not via cpp.
+	(LIBX_BASE): Use $LD_SWITCH_X_SITE.
+
 	* Makefile.in (C_SWITCH_X_SYSTEM, C_SWITCH_X_SITE, LIB_STANDARD)
 	(LIB_MATH, FONTCONFIG_CFLAGS, FONTCONFIG_LIBS, FREETYPE_CFLAGS)
 	(FREETYPE_LIBS, LIBOTF_CFLAGS, LIBOTF_LIBS, M17N_FLT_CFLAGS)
