@@ -1,3 +1,7 @@
+2010-05-13  Glenn Morris  <rgm@gnu.org>
+
+	* configure.in (LD_SWITCH_X_SITE, C_SWITCH_X_SITE): Do not define.
+
 2010-05-12  Glenn Morris  <rgm@gnu.org>
 
 	* configure.in (LIB_SRC_EXTRA_INSTALLABLES): Remove, unused.
